Added comments, refactored code

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "BoilerPlate",
+  "name": "react-node-photo-gallery",
   "version": "1.0.0",
   "description": "Sharks & Cats Gallery",
   "main": "index.js",
